--- a/test_android_developer/Resources/layout/activity_offer.xml
+++ b/test_android_developer/Resources/layout/activity_offer.xml
@@ -4,5 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:padding="20dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout" >
 
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/textId" />
+
+    </LinearLayout>
+
+
+
+    
 </RelativeLayout>
